mejora alineacion formulario data basica

--- a/src/app/pages/basic-data/basic-data.page.scss
+++ b/src/app/pages/basic-data/basic-data.page.scss
@@ -1,6 +1,12 @@
 
-.icon-center{
-  align-self:center;
+:host {
+  .icon-center{
+    align-self:center;
+    width: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .toggle-profile {
